static/css/style.css
body {
    font-family: monospace;
    background-image: url("/static/sprites/BGPixel.png");
    color: #f0f0f0;
    text-align: center;
}

.button-bar{
    position: fixed;
    bottom: 20px;
    width: 100%;
    display: flex;
    justify-content: center;
    gap: 40px;
}

.action-button {
    background-image: url("/static/sprites/AttackFireballSprite.png");
    background-repeat: no-repeat;
    background-size: 160px 160px;
    height: 54px;
    width: 150px;
    border: none;
    cursor: pointer;
    margin: 10px;
    object-fit: cover;
    background-color: transparent;
}

.action-button:hover {
    filter: brightness(1.2) saturate(1.2);
}

.action-button.attack {
    background-position: -5px -17px;
}

.action-button.fireball {
    background-position: -5px -90px;
}

#playerHP {
    position:fixed;
    bottom: 110px;
    left: 50px;
}

#playerHPBar {
    position:fixed;
    bottom: 90px;
    left: 50px;
    height: 25px;
    width: 200px;
    border-radius: 4px;
}

#enemyHP {
    position:fixed;
    bottom: 140px;
    right: 50px;
}

#enemyHPBar {
    position:fixed;
    bottom: 120px;
    right: 50px;
    height: 25px;
    width: 200px;
    border-radius: 4px;
}

#damageNotif {
    font-size: 30px;

}

.hp-bar {
    display: flex;
    align-items: center;
    gap: 8px;
    image-rendering: pixelated;
    margin-bottom: 10px;
}

.hp-icon {
    width: 32px;
    height: 32px;
}

.hp-container {
    width: 200px;
    height: 24px;
    position: relative;
    overflow: hidden;
    image-rendering: pixelated;
    background-color: transparent;
}

.hp-fill {
    height: 20px;
    width: 270px;
    background-repeat: repeat-x;
    image-rendering: pixelated;
    transition: transform 0.2s ease-out;
    background-color: transparent;
    position: absolute;
    left: 35px;
    z-index: 0;
    transform-origin: left;
}

#enemy-sprite {
    position: fixed;
    right: 100px;
    top: 200px;
    width: 220px;
    height: 440px;
    background-image: url("/static/sprites/skeleton.png");
    background-repeat: no-repeat;
    background-size: auto;
    background-position-y: 0 0;
    image-rendering: pixelated;
    overflow: hidden;
}

